--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,10 @@
-<div id="board" data-controller="hello" class="mx-auto w-full md:w-2/3 lg:w-1/3">
+<!--
+<div id="board" data-controller="hello" class="mx-auto w-full md:w-2/3 lg:w-1/3"
+data-hello-fen-value="4r3/1k6/pp3r2/1b2P2p/3R1p2/P1R2P2/1P4PP/6K1 w - - 0 35"
+data-hello-moves-array-value='["e5f6","e8e1","g1f2","e1f1"]'>
+</div>
+-->
+<div id="board" data-controller="hello" class="mx-auto w-full md:w-2/3 lg:w-1/3"
+data-hello-fen-value="8/KP3k2/8/5p2/8/8/1R2p3/2r5 w - - 0 56"
+data-hello-moves-array-value='["b7b8q","c1a1","a7b6","e2e1q","b8c7","e1e7","c7e7","f7e7"]'>
 </div>
